--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_DB: productDB
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Bhaga@0612
+      POSTGRES_PASSWORD: 
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -25,7 +25,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/productDB
       SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: Bhaga@0612
+      SPRING_DATASOURCE_PASSWORD: 
     ports:
       - "8090:8090"
     networks:
